test/test_examples/syntactic_examples/syntax_error/error_statement_44.zig
// Syntax error: two separators after each other in function

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = ifj.write("hello", "world",, "!");
}